--- a/docker_compose/docker-compose.yaml
+++ b/docker_compose/docker-compose.yaml
@@ -1,37 +1,44 @@
-version: '3.8'
-
+version: '3'
 services:
   elasticsearch:
-    image: elasticsearch:8.7.0
     container_name: elasticsearch
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
+#    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
+    environment: ['CLI_JAVA_OPTS=-Xms4g -Xmx4g','bootstrap.memory_lock=true','discovery.type=single-node','xpack.security.enabled=false', 'xpack.security.enrollment.enabled=false']
     ports:
       - 9200:9200
-    restart: always
-    environment:
-      - xpack.security.enabled=false
-      - discovery.type=single-node
+    networks:
+      - elastic
     ulimits:
       memlock:
         soft: -1
         hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+        reservations:
+          cpus: '1.0'
 
   kibana:
-    depends_on:
-      - elasticsearch
-    image: kibana:8.7.0
+#    image: docker.elastic.co/kibana/kibana:8.7.1
+    image: docker.elastic.co/kibana/kibana:8.7.0
     container_name: kibana
-    volumes:
-      - kibana-data:/usr/share/kibana/data
+    environment:
+      XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY: d1a66dfd-c4d3-4a0a-8290-2abcb83ab3aa
     ports:
       - 5601:5601
-    restart: always
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    networks:
+      - elastic
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+        reservations:
+          cpus: '1.0'
 
-volumes:
-  elasticsearch-data:
-    driver: local
-  kibana-data:
-    driver: local
+networks:
+  elastic:
