--- a/docker_compose/elastic/2/docker-compose.yaml
+++ b/docker_compose/elastic/2/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     container_name: elasticsearch
 #    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
     image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
+#    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
     environment: ['CLI_JAVA_OPTS=-Xms4g -Xmx4g','bootstrap.memory_lock=true','discovery.type=single-node','xpack.security.enabled=false', 'xpack.security.enrollment.enabled=false']
     ports:
       - 9200:9200
@@ -23,22 +24,22 @@ services:
         reservations:
           cpus: '1.0'
 
-  kibana:
-#    image: docker.elastic.co/kibana/kibana:8.7.1
-    image: docker.elastic.co/kibana/kibana:8.7.0
-    container_name: kibana
-    environment:
-      XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY: d1a66dfd-c4d3-4a0a-8290-2abcb83ab3aa
-    ports:
-      - 5601:5601
-    networks:
-      - elastic
-    deploy:
-      resources:
-        limits:
-          cpus: '2.0'
-        reservations:
-          cpus: '1.0'
+#  kibana:
+##    image: docker.elastic.co/kibana/kibana:8.7.1
+#    image: docker.elastic.co/kibana/kibana:8.7.0
+#    container_name: kibana
+#    environment:
+#      XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY: d1a66dfd-c4d3-4a0a-8290-2abcb83ab3aa
+#    ports:
+#      - 5601:5601
+#    networks:
+#      - elastic
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '2.0'
+#        reservations:
+#          cpus: '1.0'
 
 networks:
   elastic:
